<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyTaxi MapBox</string>
    <string name="mapbox_access_token">pk.eyJ1IjoieWFzaG5hcjAyIiwiYSI6ImNsZXd4MzZpNDBqODQzdmtjYWRydWw3MmEifQ.6u-u9me4CD2F3-fddF4HRw</string>

    <string name="name">Yashnarbek</string>
    <string name="phone_number">+998906772149</string>

    <string name="svoboden">Free</string>
    <string name="zanyat">Busy</string>

    <string name="zakazi">Orders</string>
    <string name="bordyur">Border</string>
    <string name="tarifi">Rates</string>

    <string name="morning">Good Morning</string>

    <string name="trips">Trips</string>
    <string name="payment">Payment</string>
    <string name="no_payments_now">No payments now</string>

    <string name="favorite">Favorite addresses</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="new_address">New address</string>

    <string name="promo">Promo Code</string>
    <string name="code">Get promocode</string>

    <string name="notifications">Notifications</string>
    <string name="no_new_notifications">No new notifications</string>

    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="write_support">Write to support</string>
    <string name="call">Call</string>
    <string name="telegram">Telegram</string>
    <string name="report_error">Report an error</string>

    <string name="settings">Settings</string>
    <string name="language">Application Language</string>
    <string name="language_name">English</string>

    <string name="map_type">Map type</string>
    <string name="map_type_name">Default</string>

    <string name="mode">Mode</string>
    <string name="mode_name">Light</string>

    <string name="about_app">About app</string>
    <string name="version">Version 1.0.0</string>

    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="uzbek">Uzbek</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>

    <string name="place">Place: </string>
    <string name="time">Time: </string>
    <string name="date">Date: </string>

    <string name="one_trip">One trip</string>
    <string name="all_trips">All trips</string>

    <string name="see_all_trips">See all trips in one map view</string>

    <string name="powered_by">Powered by Mapbox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>