<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_trips"
        android:icon="@drawable/send"
        android:title="@string/trips" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/star"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/coupon"
            android:title="@string/promo" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/bell"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/umbrella"
            android:title="@string/support" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>