<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_dark"
    android:orientation="vertical"
    tools:context=".ui.trips.TripsFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/back_card"
            app:cardCornerRadius="@dimen/_15sdp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_vertical"
            app:cardBackgroundColor="@color/white_dark"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/back" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/language_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language_name"
                    android:textColor="#A0A0A0"
                    android:textSize="@dimen/_11ssp"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="end|center_vertical"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_another"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

        <LinearLayout
            android:id="@+id/mode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_name"
                    android:textColor="#A0A0A0"
                    android:textSize="@dimen/_11ssp"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="end|center_vertical"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_another"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

        <LinearLayout
            android:id="@+id/map_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type_name"
                    android:textColor="#A0A0A0"
                    android:textSize="@dimen/_11ssp"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="end|center_vertical"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_another"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>