<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_dark"
    android:orientation="vertical"
    tools:context=".ui.trips.TripsFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/back_card"
            app:cardCornerRadius="@dimen/_15sdp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_vertical"
            app:cardBackgroundColor="@color/white_dark"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/back" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cardBackgroundColor="@color/card_dark_light"
        android:elevation="0dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear">

        <TextView
            android:textColor="#7C7C7C"
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/russian"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_check"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardBackgroundColor="@color/card_dark_light"
        android:elevation="0dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <TextView
            android:textColor="#7C7C7C"
            android:id="@+id/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/uzbek"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_check"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardBackgroundColor="@color/card_dark_light"
        android:elevation="0dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <TextView
            android:fontFamily="@font/roboto_regular"
            android:textColor="#7C7C7C"
            android:text="@string/english"
            android:id="@+id/text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/ic_check"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>